--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,3 +1,6 @@
 name = vanillaProject
 description = a vanilla project
+org = era7
+version = 0.1.0-SNAPSHOT
+akkaVersion = ls(akka)
 title = "a vanilla project template, for use when there's nothing more specific"
